make mobile responsive

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
         <!-- Time display  -->
         <p id="time">
-            <span id="hour">00</span>&nbsp;:
-            <span id="minute">00</span>&nbsp;:
-            <span id="second">00</span>&nbsp;:
+            <span id="hour">00</span>
+            <span>:</span>
+            <span id="minute">00</span>
+            <span>:</span>
+            <span id="second">00</span>
+            <span>:</span>
             <span id="centisecond">00</span>
         </p>
         <!-- buttons -->
