--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- script -->
-    <script src=".js/app.js" type="text/javascript"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
